--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
+   "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
